# isp-monitor

./: .gitignore  .python-version  README.md  Vagrantfile  hosts.yml  monitor-router.yml  monitor-vps.yml  monitor.yml  package.json  pyproject.toml  requirements.txt  requirements.yml  unifi.yml
.run/: check.run.xml  playbook monitor-router.yml.run.xml  playbook monitor-vps.yml.run.xml
group_vars/: all.yml  router.yml
roles/docker/tasks/: install.yml  main.yml  network.yml
roles/docker_install/tasks/: main.yml
roles/docker_shorewall/files/: override.conf
roles/docker_shorewall/tasks/: main.yml
roles/grafana/dashboards/: ISP Status (Full).json  Ping.json
roles/grafana/defaults/: main.yml
roles/grafana/tasks/: main.yml
roles/grafana/vars/: main.yml
roles/network/tasks/: main.yml
roles/network/templates/: network.j2
roles/ping_exporter/defaults/: main.yml
roles/ping_exporter/files/: config.yml
roles/ping_exporter/tasks/: main.yml
roles/ping_exporter_devices/defaults/: main.yml
roles/ping_exporter_devices/files/: config.yml
roles/ping_exporter_devices/tasks/: main.yml
roles/ping_exporter_isps/defaults/: main.yml
roles/ping_exporter_isps/files/: config.yml
roles/ping_exporter_isps/tasks/: main.yml
roles/ping_exporter_isps/templates/: config.yml.j2
roles/ping_exporter_tracker/defaults/: main.yml
roles/ping_exporter_tracker/files/: config.yml
roles/ping_exporter_tracker/tasks/: main.yml
roles/prometheus/tasks/: main.yml
roles/prometheus/vars/: main.yml
roles/speedtest_exporter/tasks/: main.yml
(+1 files in other folders)
