[tool.poetry]
name = "isp-monitor"
version = "0.1.0"
description = ""
authors = ["Kenneth Langga <klangga@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^4.1.0"
jmespath = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
